syntax = "proto3";

package media;

option go_package = "./proto";

service MediaService {
  rpc GetPresignedUploadUrl (GetPresignedUploadUrlRequest) returns (GetPresignedUploadUrlResponse);
  rpc GetPresignedDownloadUrl (GetPresignedDownloadUrlRequest) returns (GetPresignedDownloadUrlResponse);
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
}

message GetPresignedUploadUrlRequest {
  string bucket_name = 1;
  string object_name = 2;
  int64 expiry_seconds = 3;
}

message GetPresignedUploadUrlResponse {
  string url = 1;
}

message GetPresignedDownloadUrlRequest {
  string bucket_name = 1;
  string object_name = 2;
  int64 expiry_seconds = 3;
}

message GetPresignedDownloadUrlResponse {
  string url = 1;
}

message DeleteFileRequest {
  string bucket_name = 1;
  string object_name = 2;
}

message DeleteFileResponse {
  bool success = 1;
  string message = 2;
}
